infrastructure/gatekeeper-constraints/constraint-multi-tenant-subpath-pauwels-labs-main.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: multi-tenant-subpath-pauwels-labs-main
  namespace: gatekeeper-system
spec:
  match:
    kinds:
    - apiGroups: ["networking.istio.io/v1beta1"]
      kinds: ["VirtualService"]
  parameters:
    tenantName: pauwels-labs-main
